samples/_failures_safe/1761317726_be251e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b46962f0.c: In function ‘main’:
./samples/SAFE/__tmp_b46962f0.c:154:28: error: missing terminating " character
  154 |                     printf("Error:
      |                            ^~~~~~~
./samples/SAFE/__tmp_b46962f0.c:154:21: error: expected expression at end of input
  154 |                     printf("Error:
      |                     ^~~~~~
./samples/SAFE/__tmp_b46962f0.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b46962f0.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b46962f0.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b46962f0.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b46962f0.c:154:21: error: expected declaration or statement at end of input
